deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-apache-app-deployment
  labels:
    app: my-apache-app
spec:
  replicas: 3 # Comece com 1 réplica. Pode aumentar depois.
  selector:
    matchLabels:
      app: my-apache-app
  template:
    metadata:
      labels:
        app: my-apache-app
    spec:
      containers:
      - name: apache
        image: my-apache-app:v1.0 # Mude para a sua imagem
        ports:
        - containerPort: 80 # A porta que o Apache está ouvindo dentro do container
        volumeMounts: # Nova seção para montar volumes
        - name: apache-data
          mountPath: /usr/local/apache2/htdocs # Onde o Apache espera os arquivos
      volumes: # Definição dos volumes
      - name: apache-data # O mesmo nome usado em volumeMounts
        hostPath:
          path: /var/www/my-apache-data # O caminho no seu host Debian
          type: DirectoryOrCreate
